# consumindo_api_twitter

./: README.md  main.py  pyproject.toml
modulos/: connection.py  segredos.py  services.py
