[tool.poetry]
name = "api-twitter"
version = "0.1.0"
description = ""
authors = ["filipe andré"]
readme = "README.md"
packages = [{include = "api_twitter"}]

[tool.poetry.dependencies]
python = "3.10.9"
fastapi = "^0.92.0"
pymongo = "^4.3.3"
tweepy = "^4.12.1"
makefile = "^1.1.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
